# Pet_Hospital_System

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml  seed.py  test_connections.py
backend/alembic/: env.py
backend/alembic/versions/: 69efde1bdb38_baseline.py
backend/app/: main.py
backend/app/core/: __init__.py  config.py  deps.py  exceptions.py  security.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/billing/: models.py  router.py  schemas.py  service.py
backend/app/modules/boarding/: models.py  router.py  schemas.py  service.py
backend/app/modules/consultation/: models.py  router.py  schemas.py  service.py
backend/app/modules/customer/: models.py  router.py  schemas.py  service.py
backend/app/modules/hospitalization/: models.py  router.py  schemas.py  service.py
backend/app/modules/minio_upload/: router.py  schemas.py
backend/app/modules/pharmacy/: models.py  router.py  schemas.py  service.py
backend/app/shared/: __init__.py  minio.py  mongo_db.py  pg_db.py  redis.py
backend/app/shared/services/: __init__.py  billing_service.py
backend/app/tasks/: celery_app.py  export_bill.py
backend/sql/: init_db.sql  seed.sql
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_billing.py  test_boarding.py  test_consultation.py  test_customer.py  test_hospitalization.py  test_pharmacy.py
docs/: minio-upload-discussion.md  前端设计文档.md  数据库设计文档.md  系统架构设计 — 问题汇总与解决方案.md  系统架构设计文档.md
frontend/: README.md  (+3 more)
(+39 files in other folders)
